<resources>
    <string name="app_name">NeRecipe</string>
    <string name="description_recipe_menu">Recipe menu</string>
    <string name="description_favorite">Favourites</string>
    <string name="recipe_description">Description</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_recipe">Add recipe</string>
    <string name="description_recipe_save">Save recipe</string>
    <string name="ok">OK</string>
    <string name="no_recipe_text">You have no recipes yet</string>
    <string name="no_recipe_image">No recipe image</string>
    <string name="edit_cuisine_type">Cuisine type</string>
    <string name="edit_recipe_description">Recipe</string>
    <string name="edit_chef_name">Chef</string>
    <string name="edit_dish_name">Dish name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>

    <string-array name="cuisine_types">
        <item>@string/asian_cuisine</item>
        <item>@string/italian_cuisine</item>
        <item>@string/russian_cuisine</item>
        <item>@string/other_cuisine</item>
    </string-array>

    <string name="asian_cuisine">Asian</string>
    <string name="italian_cuisine">Italian</string>
    <string name="russian_cuisine">Russian</string>
    <string name="other_cuisine">Other</string>
</resources>