<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/reduced_spacing"
    tools:context=".ui.RecipeDescriptionFragment">

    <EditText
        android:id="@+id/editName"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="@dimen/reduced_spacing"
        android:layout_marginEnd="@dimen/reduced_spacing"
        android:hint="@string/edit_dish_name"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="start|top"
        />

    <EditText
        android:id="@+id/editAuthor"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="@dimen/reduced_spacing"
        android:layout_marginEnd="@dimen/reduced_spacing"
        android:hint="@string/edit_chef_name"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCategory"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/reduced_spacing"
        android:layout_marginEnd="@dimen/reduced_spacing"
        android:layout_marginTop="56dp"
        android:hint="@string/edit_cuisine_type">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editDescription"
        android:textAlignment="inherit"
        android:hint="@string/edit_recipe_description"
        android:background="@color/white"
        android:layout_marginStart="@dimen/reduced_spacing"
        android:layout_marginEnd="@dimen/reduced_spacing"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:nestedScrollingEnabled="true"
        android:inputType="textMultiLine"
        android:layout_marginTop="108dp"
        />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:contentDescription="@string/description_recipe_save"
        app:srcCompat="@drawable/ic_ok_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_anchorGravity="center"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelButton"
        android:contentDescription="@string/cancel_button"
        app:srcCompat="@drawable/ic_cancel_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_anchorGravity="end"
        app:backgroundTint="@android:color/holo_red_light"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>