<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CookBookFragment" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/recipe" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:contentDescription="@string/add_recipe"
        app:srcCompat="@drawable/ic_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/imageEmpty"
        android:contentDescription="@string/no_recipe_image"
        android:src="@drawable/empty"
        android:visibility="gone"
        android:layout_width="186dp"
        android:layout_height="154dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.322"
        app:layout_constraintHorizontal_bias="0.398"
        />

    <TextView
        android:id="@+id/textEmpty"
        android:text="@string/no_recipe_text"
        android:textStyle="bold"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEmpty" />

</androidx.constraintlayout.widget.ConstraintLayout>